--- a/cluster/examples/kubernetes/ceph/csi/template/rbd/csi-rbdplugin-provisioner-dep.yaml
+++ b/cluster/examples/kubernetes/ceph/csi/template/rbd/csi-rbdplugin-provisioner-dep.yaml
@@ -33,21 +33,6 @@ spec:
           volumeMounts:
             - name: socket-dir
               mountPath: /csi
-        - name: csi-resizer
-          image: {{ .ResizerImage }}
-          args:
-            - "--csi-address=$(ADDRESS)"
-            - "--v=5"
-            - "--csiTimeout=150s"
-            - "--leader-election"
-            - "--leader-election-namespace={{ .Namespace }}"
-          env:
-            - name: ADDRESS
-              value: unix:///csi/csi-provisioner.sock
-          imagePullPolicy: "IfNotPresent"
-          volumeMounts:
-            - name: socket-dir
-              mountPath: /csi
         - name: csi-rbdplugin-attacher
           image: {{ .AttacherImage }}
           args:
@@ -55,6 +40,7 @@ spec:
             - "--timeout=150s"
             - "--csi-address=$(ADDRESS)"
             - "--leader-election=true"
+            - "--leader-election-type=leases"
             - "--leader-election-namespace={{ .Namespace }}"
           env:
             - name: ADDRESS
