--- a/cluster/charts/rook-ceph/values.yaml
+++ b/cluster/charts/rook-ceph/values.yaml
@@ -241,15 +241,15 @@ csi:
   #cephcsi:
     #image: quay.io/cephcsi/cephcsi:v3.1.0
   #registrar:
-    #image: quay.io/k8scsi/csi-node-driver-registrar:v1.2.0
+    #image: k8s.gcr.io/sig-storage/csi-node-driver-registrar:v2.0.1
   #provisioner:
-    #image: quay.io/k8scsi/csi-provisioner:v1.6.0
+    #image: k8s.gcr.io/sig-storage/csi-provisioner:v2.0.0
   #snapshotter:
-    #image: quay.io/k8scsi/csi-snapshotter:v2.1.1
+    #image: k8s.gcr.io/sig-storage/csi-snapshotter:v3.0.0
   #attacher:
-    #image: quay.io/k8scsi/csi-attacher:v2.1.0
+    #image: k8s.gcr.io/sig-storage/csi-attacher:v3.0.0
   #resizer:
-    #image: quay.io/k8scsi/csi-resizer:v0.4.0
+    #image: k8s.gcr.io/sig-storage/csi-resizer:v1.0.0
 
 enableFlexDriver: false
 enableDiscoveryDaemon: true
