--- a/cluster/examples/kubernetes/ceph/common.yaml
+++ b/cluster/examples/kubernetes/ceph/common.yaml
@@ -66,6 +66,8 @@ spec:
                   type: boolean
                 osdMaintenanceTimeout:
                   type: integer
+                pgHealthCheckTimeout:
+                  type: integer
                 manageMachineDisruptionBudgets:
                   type: boolean
             skipUpgradeChecks:
@@ -106,6 +108,8 @@ spec:
                     managePodBudgets:
                       type: boolean
                     osdMaintenanceTimeout:
+                      type: integer
+                    pgHealthCheckTimeout:
                       type: integer
                     manageMachineDisruptionBudgets:
                       type: boolean
