ceph: disable CSI GRPC metrics by default
The GRPC metrics exposed by both the provisioner pod
and the node plugin pod on some port. Provisioner pod
is running on the pod network and the daemonset pods
run on the host network. sometimes starting the GRPC
metrics by default can lead to node plugin pods
crashloopback state this is due to the port conflict.
Moreover, the GRPC metrics are not for the user it's
for the one which will help to debug the time taken
by cephcsi to serve each GRPC call. Enabling it by
default won't be a good idea. So the plan is to
disable it by default, If someone faces any issue it
can be enabled later at some point in time.

closes #7378

Signed-off-by: Madhu Rajanna <madhupr007@gmail.com>
(cherry picked from commit 0a81ce2251699faf0f174e7f58a4cbb9ac149bc8)
(cherry picked from commit ab0c5f73d1a31b8403dfc8d69cdd431b75115fc9)

--- a/cluster/charts/rook-ceph/values.yaml
+++ b/cluster/charts/rook-ceph/values.yaml
@@ -49,7 +49,7 @@ pspEnable: true
 csi:
   enableRbdDriver: true
   enableCephfsDriver: true
-  enableGrpcMetrics: true
+  enableGrpcMetrics: false
   # (Optional) set user created priorityclassName for csi plugin pods.
   # pluginPriorityClassName: system-node-critical
 
