build: don't run GH actions for release-4.9-temp-*
Signed-off-by: Blaine Gardner <blaine.gardner@redhat.com>

--- a/.github/workflows/odf-push-build-release-image.yaml
+++ b/.github/workflows/odf-push-build-release-image.yaml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - release-*
+      # do not match branches like release-4.9-temp
+      - !release-*-*
 
 #
 # NOTE: this MUST be backported to each release-X.Y branch on which the workflow should run!
